build of docker image with jib