@@ -1,6 +1,7 @@
 plugins {
     id "org.springframework.boot" version "2.7.5"
     id "io.spring.dependency-management" version "1.1.0"
+    id "com.google.cloud.tools.jib" version '3.2.0'
     id "java"
 }
 
@@ -11,6 +12,11 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
     }
+}
+
+jib {
+    from.image = "eclipse-temurin:17-jre"
+    container.jvmFlags = ["--enable-preview"]
 }
 
 repositories {
@@ -64,7 +70,7 @@ test {
     useJUnitPlatform()
     jvmArgs("--enable-preview", "-javaagent:build/libs/opentelemetry-javaagent.jar")
     environment("OTEL_EXPORTER_OTLP_ENDPOINT", "http://localhost:4317")
-    environment("OTEL_RESOURCE_ATTRIBUTES", "service.name=devices-configuration")
+    environment("OTEL_RESOURCE_ATTRIBUTES", "service.name=ddd-devices")
     environment("OTEL_METRICS_EXPORTER", "none")
     environment("OTEL_LOGS_EXPORTER", "none")
 }
